Camera and Textures
Camera and Textures

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>3D Game Engin</name>
+	<name>3D Game Engine</name>
 	<comment></comment>
 	<projects>
 	</projects>
